// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replace ingredient replacement replaces ingredients in create recipes: modified create:raw_zinc recipe 1`] = `
{
  "ingredients": [
    {
      "tag": "#forge:raw_materials/iron",
    },
  ],
  "processingTime": 400,
  "results": [
    {
      "item": "create:crushed_raw_zinc",
    },
    {
      "chance": 0.75,
      "item": "create:experience_nugget",
    },
  ],
  "type": "create:crushing",
}
`;

exports[`replace ingredient replacement replaces ingredients in create recipes: modified create:raw_zinc_block recipe 1`] = `
{
  "key": {
    "C": {
      "tag": "#forge:raw_materials/iron",
    },
  },
  "pattern": [
    "CCC",
    "CCC",
    "CCC",
  ],
  "result": {
    "item": "create:raw_zinc_block",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replace ingredient replacement replaces ingredients in create recipes: modified create:zinc_ingot_from_raw_ore recipe 1`] = `
{
  "cookingtime": 100,
  "experience": 0.7,
  "ingredient": {
    "tag": "#forge:raw_materials/iron",
  },
  "result": "create:zinc_ingot",
  "type": "minecraft:blasting",
}
`;

exports[`replace ingredient replacement replaces ingredients in create recipes: modified create:zinc_ingot_from_raw_ore recipe 2`] = `
{
  "cookingtime": 200,
  "experience": 0.7,
  "ingredient": {
    "tag": "#forge:raw_materials/iron",
  },
  "result": "create:zinc_ingot",
  "type": "minecraft:smelting",
}
`;

exports[`replace ingredient replacement replaces ingredients with additional input filter: modified note_block recipe 1`] = `
{
  "key": {
    "#": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:emerald",
    },
  },
  "pattern": [
    "###",
    "#X#",
    "###",
  ],
  "result": {
    "item": "minecraft:note_block",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replace ingredient replacement replaces ingredients with additional input filter: modified piston recipe 1`] = `
{
  "key": {
    "#": {
      "item": "minecraft:cobblestone",
    },
    "R": {
      "item": "minecraft:emerald",
    },
    "T": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:iron_ingot",
    },
  },
  "pattern": [
    "TTT",
    "#X#",
    "#R#",
  ],
  "result": {
    "item": "minecraft:piston",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replace ingredient replacement replaces ingredients: modified compass recipe 1`] = `
{
  "key": {
    "#": {
      "item": "minecraft:iron_ingot",
    },
    "X": {
      "item": "minecraft:emerald",
    },
  },
  "pattern": [
    " # ",
    "#X#",
    " # ",
  ],
  "result": {
    "item": "minecraft:compass",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replace ingredient replacement replaces ingredients: modified piston recipe 1`] = `
{
  "key": {
    "#": {
      "item": "minecraft:cobblestone",
    },
    "R": {
      "item": "minecraft:emerald",
    },
    "T": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:iron_ingot",
    },
  },
  "pattern": [
    "TTT",
    "#X#",
    "#R#",
  ],
  "result": {
    "item": "minecraft:piston",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replace ingredient replacement replaces ingredients: recipes including redstone as an ingredient 1`] = `
[
  "data/botania/recipe/brew/speed.json",
  "data/botania/recipe/brew/weak_regeneration.json",
  "data/botania/recipe/detector_light_relay.json",
  "data/botania/recipe/ender_eye_block.json",
  "data/botania/recipe/hourglass.json",
  "data/botania/recipe/lens_mine.json",
  "data/botania/recipe/mana_detector.json",
  "data/botania/recipe/mana_infusion/mana_powder_dust.json",
  "data/botania/recipe/mana_infusion/redstone_dupe.json",
  "data/botania/recipe/mana_infusion/redstone_to_glowstone_dust.json",
  "data/botania/recipe/pattern_1_1.json",
  "data/botania/recipe/pattern_1_2.json",
  "data/botania/recipe/pattern_1_3.json",
  "data/botania/recipe/pattern_2_1.json",
  "data/botania/recipe/pattern_2_2.json",
  "data/botania/recipe/pattern_2_3.json",
  "data/botania/recipe/pattern_3_1.json",
  "data/botania/recipe/pattern_3_2.json",
  "data/botania/recipe/pattern_donut.json",
  "data/botania/recipe/quartz_red.json",
  "data/botania/recipe/red_pavement.json",
  "data/botania/recipe/redstone_root.json",
  "data/botania/recipe/redstone_spreader.json",
  "data/botania/recipe/spark_changer.json",
  "data/botania/recipe/unholy_cloak.json",
  "data/minecraft/recipe/clock.json",
  "data/minecraft/recipe/compass.json",
  "data/minecraft/recipe/detector_rail.json",
  "data/minecraft/recipe/dispenser.json",
  "data/minecraft/recipe/dropper.json",
  "data/minecraft/recipe/note_block.json",
  "data/minecraft/recipe/observer.json",
  "data/minecraft/recipe/piston.json",
  "data/minecraft/recipe/powered_rail.json",
  "data/minecraft/recipe/redstone_block.json",
  "data/minecraft/recipe/redstone_lamp.json",
  "data/minecraft/recipe/redstone_torch.json",
  "data/minecraft/recipe/repeater.json",
  "data/minecraft/recipe/target.json",
]
`;
